--- a/css/_contact_section.scss
+++ b/css/_contact_section.scss
@@ -19,6 +19,7 @@
             padding-top: 4vh;
             display: flex;
             flex-direction: column;
+            transition: 1s ease-in-out;
             h1 {
                 font-size: 5vw;
             }
@@ -44,6 +45,7 @@
                 height: 10vh;
                 &:hover {
                     cursor: pointer;
+                    background: $yellow;
                 }
             }
             span{
@@ -88,21 +90,32 @@
     }
 }
 @media only screen and (max-width: 666px) {
-    
     #contact {
         height: auto;
+        padding: 4rem;
+        margin: 0; 
         .contact {
             width: 90vw;
             position: relative;
             display: flex;
-            flex-direction: column-reverse;
+            flex-direction: column;
+            height: auto;
+            margin: 0;
             .left-contact{
                 position: relative;
-                margin: 0; padding: 10rem;
+                margin: auto; padding: 7rem;
                 width: 100%;
+                height: 80vh;
+                h1 {
+                    font-size: 10vw;
+                }
+                p {
+                    font-size: 3vw;
+                }
                 input {
-                    width: 90%;
                     margin: 1vh auto;
+                    font-size: 3vw;
+                    margin-top: 3vh;
                 }
                 span {
                     display: none;
@@ -110,8 +123,21 @@
             }
             .right-contact{
                 position: relative;
-                margin: 10vh 0;
-                width: 70vw;
+                margin: auto;
+                padding-bottom: 5vh;
+                width: 80vw;
+                height: auto;
+                left: auto; right: auto;
+                top: -5vh; 
+                div {
+                    margin-left: 5vw;
+                    h1 {
+                    font-size: 10vw;
+                    }
+                    p, i{
+                        font-size: 3vw;
+                    }
+                }
             }
         }
     }
