--- a/css/_navbar.scss
+++ b/css/_navbar.scss
@@ -18,10 +18,6 @@ nav{
     .logo {
         margin-left: 1rem;
         width: 3rem; height: 3rem;
-        &:hover {
-            border: 3px solid $green;
-            border-radius: 0.4rem;
-        }
     }    
     .nav-line {
         position: relative;
@@ -47,16 +43,21 @@ nav{
     }
     ul {
         display: flex;
+        height: 100%;
+        align-items: center;
+        .active {
+            a {
+                border-bottom: 2px solid $black-2;
+                padding-bottom: 1vh;
+            }
+        }
         li {
             list-style-type: none;
             margin-right: 4vw;
             a{
             color: $black;
             text-decoration-line: none;
-            &:hover {
-                color: $black;
-                text-decoration-line: none;        
-                }
+            transition: 0.4s ease-in-out;
             }
         }
     }
@@ -79,43 +80,67 @@ nav{
     }
     .menu-exit-btn {
         width: 30px; height: 25px;
-        display: none;
         justify-content: space-between;
         position: relative;
         align-items: center;
+        display: flex;
+        flex-direction: column;
+        display: none;
         span {
             width: 100%;
-            height: 8px;
+            height: 5px;
             background: $black-2;
             position: absolute;
+            &:nth-child(1){
+                transform: rotate(45deg);
+            }
+            &:nth-child(2){
+                transform: rotate(-45deg);
+            }
         }
     }
 } 
 
 @media only screen and (max-width: 666px) {
     nav {
-        justify-content: space-around;
         ul {
             display: none;
+            position: absolute;
+            background: $transparent-yellow;
+            top: 0; left: 0; right: 0; bottom: 0;
+            width: 100%;
+            height: 100vh;
+            flex-direction: column;
+            place-content: center;
+            justify-content: space-evenly;
+            transition: 0.7s ease-in-out;
+            backdrop-filter: blur(10px);
+            li{
+                a{
+                font-size: 5vw;
+                }
+            }
         }
         .menu-btn {
+            position: relative;
             display: flex;
+            margin-right: 3rem;
+            transition: 0.7s ease-in-out;
         }
         .menu-exit-btn {
-            span:nth-child(1) {
-                transform: rotate(45deg);
-            }
-            span:nth-child(2) {
-                transform: rotate(-45deg);
-            }
+            margin-right: 3rem;
+            margin-top: 3vh;
+            align-self: center;
+            transition: 0.7s ease-in-out;
         }
         .logo {
             width: 5rem; height: 5rem;
+            margin-left: 3rem;
         }
         .nav-line {
-            width: 60vw;
+            width: 70%;
             p {
-            font-size: 2.2vw;
+            font-size: 4vw;
             font-weight: bolder;
             }
         }
