--- a/css/style.css
+++ b/css/style.css
@@ -58,11 +58,6 @@ nav .logo {
   height: 3rem;
 }
 
-nav .logo:hover {
-  border: 3px solid #00ac09;
-  border-radius: 0.4rem;
-}
-
 nav .nav-line {
   position: relative;
   width: 40vw;
@@ -123,6 +118,15 @@ nav ul {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  height: 100%;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+nav ul .active a {
+  border-bottom: 2px solid #333333;
+  padding-bottom: 1vh;
 }
 
 nav ul li {
@@ -134,12 +138,8 @@ nav ul li a {
   color: #0B0500;
   -webkit-text-decoration-line: none;
           text-decoration-line: none;
-}
-
-nav ul li a:hover {
-  color: #0B0500;
-  -webkit-text-decoration-line: none;
-          text-decoration-line: none;
+  -webkit-transition: 0.4s ease-in-out;
+  transition: 0.4s ease-in-out;
 }
 
 nav:hover {
@@ -170,7 +170,6 @@ nav .menu-btn span {
 nav .menu-exit-btn {
   width: 30px;
   height: 25px;
-  display: none;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
@@ -178,45 +177,88 @@ nav .menu-exit-btn {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  display: none;
 }
 
 nav .menu-exit-btn span {
   width: 100%;
-  height: 8px;
+  height: 5px;
   background: #333333;
   position: absolute;
 }
 
+nav .menu-exit-btn span:nth-child(1) {
+  -webkit-transform: rotate(45deg);
+          transform: rotate(45deg);
+}
+
+nav .menu-exit-btn span:nth-child(2) {
+  -webkit-transform: rotate(-45deg);
+          transform: rotate(-45deg);
+}
+
 @media only screen and (max-width: 666px) {
-  nav {
-    -ms-flex-pack: distribute;
-        justify-content: space-around;
-  }
   nav ul {
     display: none;
+    position: absolute;
+    background: rgba(255, 216, 0, 0.9);
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    width: 100%;
+    height: 100vh;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    place-content: center;
+    -webkit-box-pack: space-evenly;
+        -ms-flex-pack: space-evenly;
+            justify-content: space-evenly;
+    -webkit-transition: 0.7s ease-in-out;
+    transition: 0.7s ease-in-out;
+    -webkit-backdrop-filter: blur(10px);
+            backdrop-filter: blur(10px);
+  }
+  nav ul li a {
+    font-size: 5vw;
   }
   nav .menu-btn {
+    position: relative;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
+    margin-right: 3rem;
+    -webkit-transition: 0.7s ease-in-out;
+    transition: 0.7s ease-in-out;
   }
-  nav .menu-exit-btn span:nth-child(1) {
-    -webkit-transform: rotate(45deg);
-            transform: rotate(45deg);
-  }
-  nav .menu-exit-btn span:nth-child(2) {
-    -webkit-transform: rotate(-45deg);
-            transform: rotate(-45deg);
+  nav .menu-exit-btn {
+    margin-right: 3rem;
+    margin-top: 3vh;
+    -ms-flex-item-align: center;
+        -ms-grid-row-align: center;
+        align-self: center;
+    -webkit-transition: 0.7s ease-in-out;
+    transition: 0.7s ease-in-out;
   }
   nav .logo {
     width: 5rem;
     height: 5rem;
+    margin-left: 3rem;
   }
   nav .nav-line {
-    width: 60vw;
+    width: 70%;
   }
   nav .nav-line p {
-    font-size: 2.2vw;
+    font-size: 4vw;
     font-weight: bolder;
   }
 }
@@ -1064,16 +1106,13 @@ footer div {
           justify-content: space-evenly;
 }
 
-footer div a {
-  -webkit-transition: 0.4s ease-in;
-  transition: 0.4s ease-in;
-}
-
 footer div a:hover i {
   color: #FDFFFF;
 }
 
 footer div a i {
+  -webkit-transition: 0.4s ease-in-out;
+  transition: 0.4s ease-in-out;
   font-size: 3vw;
 }
 
