--- a/css/_about_section.scss
+++ b/css/_about_section.scss
@@ -21,7 +21,6 @@
             box-shadow: 10px 18px 32px 10px rgba( 31, 38, 135, 0.37 );
         }
     }
-    
 }
 #about div:nth-child(3){
     padding: 1rem;
@@ -56,16 +55,19 @@
             width: 80vw;
             margin-top: 5rem;
             margin-bottom: 5rem;
-        }
-        div:nth-child(2){
+            &:nth-child(2){
             background: $white;
-            padding: 1rem;
-            h1 {
-                font-size: 6vw;
-            }
-            p{
-                font-size: 3.5vw;
-                margin-top: 1rem;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            height: auto;
+            padding: 2rem;
+                h1 {
+                    font-size: 8vw;
+                }
+                p{
+                    font-size: 4vw;
+                }
             }
         }
         div:nth-child(1), div:nth-child(3) {
