--- a/css/_contact_section.scss
+++ b/css/_contact_section.scss
@@ -92,7 +92,7 @@
 @media only screen and (max-width: 666px) {
     #contact {
         height: auto;
-        padding: 4rem;
+        padding: 0;
         margin: 0; 
         .contact {
             width: 90vw;
@@ -100,12 +100,12 @@
             display: flex;
             flex-direction: column;
             height: auto;
-            margin: 0;
+            margin: 10rem auto; padding: 0;
             .left-contact{
                 position: relative;
                 margin: auto; padding: 7rem;
                 width: 100%;
-                height: 80vh;
+                height: auto;
                 h1 {
                     font-size: 10vw;
                 }
@@ -128,7 +128,7 @@
                 width: 80vw;
                 height: auto;
                 left: auto; right: auto;
-                top: -5vh; 
+                top: -3rem;
                 div {
                     margin-left: 5vw;
                     h1 {
